--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
+/*
+=============== 
+Global Styles
+===============
+*/
+/* reset */
+body,
+p,
+a,
+ul,
+li,
+h2,
+h1,
+h3 {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+li {
+  list-style-type: none;
+}
+
+body {
+  background: #f1f5f8;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1,
+h3, h2 {
   text-align: center;
+
+  text-transform: capitalize;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* mobile styles */
+header {
+  padding: 30px 0;
+  text-align: center;
+  background-color: black;
+}
+h1 {
+  font-size: 2.5em;
+  color: #60dbfb;
+  
+}
+h2 {
+  font-size: 2em;
+  color: #324d67;
+  padding: 10px;
+  margin-top: 10px;
+}
+h3 {
+  color: #617d98;
+  padding-bottom: 10px;
+  font-size: 1.2em;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.cardWrapper {
+  margin: 15px 5%;
+}
+.cardWrapper article {
+  transition: all 0.3s linear;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.cardWrapper .card img {
+  border-radius: 5px 5px 0 0;
+
+  width: 100%;
+}
+h3 {
+  color: #617d98;
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 1.2em;
+}
+.underline {
+  margin-bottom: 10px;
+  width: 5rem;
+  height: 0.25rem;
+  background: #60dbfb;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (min-width: 620px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  h1 {
+    font-size: 2.7em;
+    color: #60dbfb;
+  }
+  h2 {
+    font-size: 2.2em;
+    text-align: center;
+    color: #324d67;
+  }
+  h3 {
+    font-size: 1.4em;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 960px) {
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr;
   }
-  to {
-    transform: rotate(360deg);
+  h1 {
+    font-size: 3em;
+    color: #60dbfb;
+  }
+  h2 {
+    font-size: 2.5em;
+    text-align: center;
+    color: #324d67;
+  }
+  h3 {
+    font-size: 1.6em;
   }
 }
