--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ li {
 }
 
 body {
+  letter-spacing: 4px;
   background: #f1f5f8;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
